# lunaphore_analysis

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md
backend/sparc_backend/: __init__.py  app.py  config.py  database.py  ingest.py  models.py  schemas.py  tasks.py  worker.py
backend/sparc_backend/preprocess/: __init__.py  background.py  configs.py
backend/sparc_backend/projects/: __init__.py  paths.py  service.py  snapshots.py
cli/: README.md
cli/sparc_cli/: __init__.py  cli.py  client.py  config.py
configs/: README.md  api.yaml  celltype_signatures.csv  cluster_labels.csv  fast_preview.yaml  preprocessing.yaml  publication_grade.yaml  worker.yaml
data_examples/: README.md
docker/: README.md  backend.Dockerfile  frontend.Dockerfile
docs/: system_overview.md
frontend/: .eslintrc.cjs  .prettierrc.json  README.md  package.json  tsconfig.json
frontend/src/: index.test.ts  index.ts
frontend/src/api/: client.ts  types.ts
frontend/src/app/: App.tsx
frontend/src/components/: ProjectList.tsx  VivPreview.tsx
frontend/src/hooks/: usePollingQuery.ts
frontend/src/routes/: IngestFlowView.tsx  PreprocessView.tsx
notebooks/: README.md
scripts/: README.md
